--- a/TP4/Styles/MasterPageStyle.css
+++ b/TP4/Styles/MasterPageStyle.css
@@ -1,4 +1,17 @@
-﻿#pnlConnexion
+﻿html, body
+{
+  width : 100%;
+  height : 100%;
+}
+
+#header
+{
+  width : 100%;
+  height : 100px;
+  background-color : #BBB;
+}
+
+#divConnexion
 {
   display : none;
 }
