--- a/TP4/MasterPage.master
+++ b/TP4/MasterPage.master
@@ -13,16 +13,37 @@
 </head>
 <body>
     <form id="form1" runat="server">
-    <input id="btnSeConnecter" type="button" value="Se connecter" onclick = "onConnectClick()"/>
-    <div id="pnlConnexion">
-
-      yolo
-      <asp:Button ID="Button1" runat="server" Text="Button" />
-    </div>
-        
-        <asp:ContentPlaceHolder id="Wrapper" runat="server">
+      <div id ="header">
+        <asp:Menu ID="Menu1" runat="server" Orientation="Horizontal">
+          <Items>
+            <asp:MenuItem Text="Acceuil" Value="Acceuil"></asp:MenuItem>
+            <asp:MenuItem Text="Évènement" Value="Évènement"></asp:MenuItem>
+            <asp:MenuItem Text="Forum" Value="Forum"></asp:MenuItem>
+          </Items>
+        </asp:Menu>
+        <asp:Panel ID="pnlConnexion" runat="server">
+          <input id="btnConnexion" type="button" value="Connexion" onclick = "onConnectClick()"/>
+          <asp:Button ID="btnInscription" runat="server" Text="Inscription" PostBackUrl="~/PageInscription.aspx" />
+        </asp:Panel>
+        <asp:Panel ID="pnlConnected" runat="server" Visible="False">
+          <asp:ImageButton ID="imgbtnProfil" runat="server" Visible="True" />
+          <asp:Button ID="btnDeconnexion" runat="server" Text="Déconnexion" Visible="True" CausesValidation="False" OnClick="btnDeconnexion_Click" />
+        </asp:Panel>
+        <div id="divConnexion">
+          <asp:Label ID="lblPseudo" runat="server" Text="Pseudo"></asp:Label>
+          <asp:TextBox ID="txtbPseudo" runat="server"></asp:TextBox>
+          <asp:RequiredFieldValidator ID="valReqPseudo" runat="server" ControlToValidate="txtbPseudo" Display="None" ErrorMessage="Vous devez entrer votre pseudo" ValidationGroup="connexion"></asp:RequiredFieldValidator>
+          <asp:Label ID="lblPassword" runat="server" Text="Password"></asp:Label>
+          <asp:TextBox ID="txtbPassword" runat="server" TextMode="Password"></asp:TextBox>
+          <asp:RequiredFieldValidator ID="valReqPassword" runat="server" ControlToValidate="txtbPassword" Display="None" ErrorMessage="Vous devez entrer votre mot de passe" ValidationGroup="connexion"></asp:RequiredFieldValidator>
+          <asp:ValidationSummary ID="valsumConnexion" runat="server" ForeColor="Red" ValidationGroup="connexion" />
+          <asp:Label ID="lblErreurConnexion" runat="server"></asp:Label>
+          <asp:Button ID="btnSeConnecter" runat="server" Text="Se connecter" ValidationGroup="connexion" OnClick="btnSeConnecter_Click"/>
+        </div>
+      </div>
+      <asp:ContentPlaceHolder id="Wrapper" runat="server">
           
-        </asp:ContentPlaceHolder>
+      </asp:ContentPlaceHolder>
     </form>
 </body>
 </html>
