--- a/TP4/MasterPage.master
+++ b/TP4/MasterPage.master
@@ -19,14 +19,15 @@
             <asp:MenuItem Text="Acceuil" Value="Acceuil"></asp:MenuItem>
             <asp:MenuItem Text="Évènement" Value="Évènement"></asp:MenuItem>
             <asp:MenuItem Text="Forum" Value="Forum"></asp:MenuItem>
+            <asp:MenuItem Text="Nous joindre" Value="Nous joindre"></asp:MenuItem>
           </Items>
         </asp:Menu>
         <asp:Panel ID="pnlConnexion" runat="server">
           <input id="btnConnexion" type="button" value="Connexion" onclick = "onConnectClick()"/>
-          <asp:Button ID="btnInscription" runat="server" Text="Inscription" PostBackUrl="~/PageInscription.aspx" />
+          <asp:Button ID="btnInscription" runat="server" Text="Inscription" PostBackUrl="~/PageInscription.aspx" CausesValidation="False" />
         </asp:Panel>
         <asp:Panel ID="pnlConnected" runat="server" Visible="False">
-          <asp:ImageButton ID="imgbtnProfil" runat="server" Visible="True" />
+          <asp:ImageButton ID="imgbtnProfil" runat="server" Visible="True" CausesValidation="False" PostBackUrl="~/PageModification.aspx" />
           <asp:Button ID="btnDeconnexion" runat="server" Text="Déconnexion" Visible="True" CausesValidation="False" OnClick="btnDeconnexion_Click" />
         </asp:Panel>
         <div id="divConnexion">
@@ -41,6 +42,11 @@
           <asp:Button ID="btnSeConnecter" runat="server" Text="Se connecter" ValidationGroup="connexion" OnClick="btnSeConnecter_Click"/>
         </div>
       </div>
+      <asp:Panel ID="pnlConnexionReussie" runat="server" EnableViewState="False" Visible="False">
+        <asp:Label ID="lblConnexionReussie" runat="server" Text="Connexion réussie!"></asp:Label>
+        <br />
+        <input id="btnFermerConnexionReussie" type="button" value="Ok" onclick = "onBtnFermerConnexionReussieClick();"/>
+      </asp:Panel>
       <asp:ContentPlaceHolder id="Wrapper" runat="server">
           
       </asp:ContentPlaceHolder>
