--- a/TP4/Styles/MasterPageStyle.css
+++ b/TP4/Styles/MasterPageStyle.css
@@ -3,13 +3,17 @@
   width : 100%;
   height : 100%;
   margin : 0px;
+  background-color : #101010;
 }
 
 #header
 {
-  width : 100%;
+  width : 80%;
   height : 100px;
-  background-color : #BBB;
+  background : linear-gradient(#252525, black);
+  margin : auto;
+  margin-bottom : 10px;
+  box-shadow : 0px 0px 10px;
 }
 
 #divConnexion
@@ -33,4 +37,13 @@
 {
   width : 75px;
   height : 75px;
+}
+
+#wrapper
+{
+  width : 80%;
+  margin-left : auto;
+  margin-right : auto;
+  background-color : #808080;
+  box-shadow : 0px 0px 10px;
 }
