Ajout de la page d'inscription aux évènements
La page d'inscription n'est pas finie. Maintenant, la variable de
session "lastPage" correspondra toujours à la dernière page visité.

--- a/TP4/Styles/MainStyle.css
+++ b/TP4/Styles/MainStyle.css
@@ -1,7 +1,13 @@
-﻿.btn
+﻿input[type=button], input[type=submit]
 {
   background-color : #002cff;
   height : 2em;
   border : none;
   color : white;
+}
+
+input[type=button]:hover, input[type=submit]:hover
+{
+  background-color : #0044ff;
+  cursor : pointer;
 }
