--- a/TP4/Styles/MasterPageStyle.css
+++ b/TP4/Styles/MasterPageStyle.css
@@ -44,6 +44,6 @@
   width : 80%;
   margin-left : auto;
   margin-right : auto;
-  background-color : #808080;
+  background-color : #c6c6c6;
   box-shadow : 0px 0px 10px;
 }
