--- a/TP4/Styles/MasterPageStyle.css
+++ b/TP4/Styles/MasterPageStyle.css
@@ -23,14 +23,13 @@
 
 #pnlConnexionReussie
 {
-  top : 30px;
-  right : 50px;
   width : 200px;
   height : 4em;
   color : white;
   background-color : #4A8E15;
   position : fixed;
   text-align : center;
+  transition : opacity 1s;
 }
 
 #imgbtnProfil
